public abstract class Sentence implements ProgramElement {

}
