package semantic.element.sentence.conditional_branch;

import semantic.element.element_interfaces.ProgrammableElement;

public interface ConditionalBranch extends ProgrammableElement {

    ConditionalBranch getPreviousBranch();
}
