package semantic.element_interfaces;

public interface AssignableElement extends ProgramElement {
    String getLiteralValue();
}

